pa-player: Check the pa_simple before writing

This avoids crashes when the construction of the pa_simple failed.

https://bugzilla.gnome.org/show_bug.cgi?id=781887